refactor: Update service and test implementations for multiple brands with same price - Update DTOs, modify services, fix tests